version 2024c, in progress
- Appending data via the GUI: support the fixed-sample option
- "summary" command with --by option: provide a $result matrix
  if the list argument contains a single series, and improve
  the format of the printout
- "corr" command: be more explicit about the sample(s) used
- Fix bug: append via console not updating series list in the
  main gretl window
- Fix bug: console command-line broken following use of "printf"
  with no newline in the format
- Fix bug in "corrgm" command: spurious signifiance stars shown
  for the PACF when the --bartlett option is given
- Fix bug in "adf" command (without the --gls option): error if
  all of --c, --nc, --ct and --ctt were given
- Fix a lacuna in type-checking of hansl statements
- GUI: random effects panel model: fix breakage in selecting
  the --nerlove option
- GUI: support the --by option for the "summary" command, when
  called via the main-window "View" menu
- GUI: fix the "Numerical summary" option in a window showing
  a factorized boxplot (was broken when the factor variable was
  string-valued)
- GUI: try to ensure that the "Compact data" and "Expand data"
  menu items are disabled when the dataset is cross-sectional
- Windows 64-bit build: make Consolas the default monospace
  font
- Added --case option to the "rename" command, allowing bulk case conversion of all series names in the dataset.

2024-05-21 version 2024b
- "gridplot" command: add a --title option
- "clear" command: add an --all option
- instrings() function: add optional boolean argument to get
  a simple boolean return value
- typeof() function: functionality is extended to cover hansl
  expressions in general
- exists() function: recommended usage is restricted to top-
  level identifiers, but backward compatibility is preserved
  for the present
- new function binperms() for binary permutations
- Testing for equality via "==" and "!=": extend this to cover
  arrays and bundles